test/TestPhases/typechecker/valid/addition.blc
module


activity empty ()()
    var y: int16 = 7
    var x: int32 = 15 + y
    
    x = x + y;;;
    await false;
end
