test/TestPhases/typechecker/invalid/additionX1.blc
module


activity empty ()()
    var y: int16 = 7
    var x: int32 = 15 + y

    y = x + y
    await false;
end
